Created center CSS. Added logo. Added images folder. Modified html.

--- a/data/index.html
+++ b/data/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ESP8266 Web Server</title>
+  <title>AC WiFi v1.0</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="data:,">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
-  <h1>ESP8266 Web Server</h1>
+<body> 
+  <img src="images/logo.jpg" alt="VizzTech Electrical" class="center">
+  <h1>AC WiFi v1.0</h1>
   <p>GPIO state<strong> %STATE%</strong></p>
   <p>
     <a href="/on"><button class="button">ON</button></a>
