--- a/data/index.html
+++ b/data/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body> 
-  <img src="/images/logo.jpg" alt="VizzTech Electrical" class="center">
+  <img src="./logo.jpg" alt="VizzTech Electrical" class="center">
   <h1>AC WiFi v1.0</h1>
   <p>GPIO state<strong> %STATE%</strong></p>
   <p>
