added setup page

--- a/data/index.html
+++ b/data/index.html
@@ -8,10 +8,12 @@
 </head>
 <body> 
   <h1>AC WiFi v1.0</h1>
-  <p>GPIO state<strong> %STATE%</strong></p>
   <p>
-    <a href="/on"><button class="button">ON</button></a>
-    <a href="/off"><button class="button button2">OFF</button></a>
+    <div class="boxed">
+      <h3>Power Control</h3>
+      <a href="/on"><button class="button">ON</button></a>
+      <a href="/off"><button class="button button2">OFF</button></a>
+    </div>
   </p>
   <p>
     <span class="sensor-labels">Temperature</span>
@@ -27,6 +29,9 @@
     <span class="sensor-labels">Pressure</span>
     <span id="pressure">%PRESSURE%</span>
     <sup class="units">hPa</sup>
+  </p>
+  <p>
+	<a href="setup.html"><button class="button button3" type="button">Setup</button></a>
   </p>
 </body>
 <script>
