--- a/data/setup.html
+++ b/data/setup.html
@@ -8,6 +8,21 @@
 </head>
 <body> 
   <h1>Setup</h1>
-
+	<div class="setup">
+		<p>	
+			<h3>WiFi Setup</h3>
+			<label for="ssid">SSID:</label>
+			<input type="text" id="ssid" name="ssid" size="20"><br><br>
+			<label for="passphrase">PASS:</label>
+			<input type="text" id="passphrase" name="passphrase" size="20"><br><br>
+			<input type="submit" value="Submit">	
+		</p>
+		<p>
+			<h3>Domoticz Setup</h3>
+		</p>
+		<p>
+			<a href="/"><button class="button button3" type="button">Back</button></a>
+		</p>
+	</div>
 </body>
 </html>
