--- a/data/setup.html
+++ b/data/setup.html
@@ -11,11 +11,13 @@
 	<div class="setup">
 		<p>	
 			<h3>WiFi Setup</h3>
+			<form action="/updatewifi">
 			<label for="ssid">SSID:</label>
 			<input type="text" id="ssid" name="ssid" size="20"><br><br>
 			<label for="passphrase">PASS:</label>
-			<input type="text" id="passphrase" name="passphrase" size="20"><br><br>
-			<input type="submit" value="Submit">	
+			<input type="text" id="pass" name="pass" size="20"><br><br>
+			<input type="submit" value="Submit">
+			</form>
 		</p>
 		<p>
 			<a href="/"><button class="button button3" type="button">Back</button></a>
